--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
+  assets:
+    - assets/images/drawer_header.png
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
