--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   toast: ^0.1.3
   sqflite: ^1.1.0
   rxdart: ^0.21.0
+  url_launcher: ^3.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
